<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/product_back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dimen_3dp"
    android:layout_marginTop="@dimen/dimen_4dp"
    android:layout_marginRight="@dimen/dimen_3dp"
    android:layout_marginBottom="@dimen/dimen_4dp"
    android:background="@drawable/card_background">
    <!--
        android:layout_marginBottom="@dimen/dimen_18dp"
android:background="@drawable/boarder_similar_product"-->

    <RelativeLayout
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_0dp"
        android:background="@drawable/card_background"
        android:padding="@dimen/dimen_5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/product_image"
            style="@style/SelectableItemBackgroundWithBorderForImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_260dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_placeholder_small" />


        <com.plotch.sdk.ChatBotService.view_element.ProximaNovaTextViewRegular
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_image"
            android:layout_marginLeft="@dimen/dimen_2dp"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:layout_marginRight="@dimen/dimen_2dp"
            android:layout_marginBottom="@dimen/dimen_2dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            android:minLines="2"
            android:text="@string/similar_product_name"
            android:textColor="@color/color_8a000000"
            android:textSize="@dimen/dimen_11sp" />


        <com.plotch.sdk.ChatBotService.view_element.ProximaNovaTextViewBold
            android:id="@+id/product_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name"
            android:layout_marginLeft="@dimen/dimen_2dp"
            android:gravity="bottom"
            android:maxLines="1"
            android:text="@string/similar_product_reg_price"
            android:textColor="@color/black_70"
            android:textSize="@dimen/dimen_14sp" />

        <com.plotch.sdk.ChatBotService.view_element.ProximaNovaTextViewRegular
            android:id="@+id/mTextViewOfferPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name"
            android:layout_alignBottom="@id/product_status"
            android:layout_marginLeft="@dimen/dimen_4dp"
            android:layout_toRightOf="@id/product_status"
            android:gravity="bottom"
            android:maxLines="1"
            android:text="87787"
            android:textColor="@color/grey_40"
            android:textSize="@dimen/dimen_10sp" />

        <com.plotch.sdk.ChatBotService.view_element.ProximaNovaTextViewRegular
            android:id="@+id/mtextViewSavePercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name"
            android:layout_alignBottom="@id/mTextViewOfferPrice"
            android:layout_marginLeft="@dimen/dimen_4dp"
            android:layout_toRightOf="@id/mTextViewOfferPrice"
            android:gravity="bottom"
            android:maxLines="1"
            android:text="@string/similar_product_save"
            android:textColor="@color/color_72c319"
            android:textSize="@dimen/dimen_10sp" />

        <LinearLayout
            android:id="@+id/product_card_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_status"
            android:weightSum="2">

            <TextView
                android:id="@+id/option"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_30dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="@dimen/dimen_2dp"
                android:layout_weight="1"
                android:background="@drawable/grey_outline_back"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:maxLines="1"
                android:padding="4dp"
                android:text="View"
                android:textAllCaps="false"
                android:textColor="@color/black_54"
                android:textSize="@dimen/dimen_12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/buy"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_30dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="@dimen/dimen_2dp"
                android:layout_weight="1"
                android:background="@drawable/green_line_back"
                android:drawableLeft="@drawable/ic_shopping_cart_black_24dp"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:maxLines="1"
                android:padding="6dp"
                android:text="Buy Now"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_12sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>



